@@ -1,3 +1,9 @@
+2004-10-07 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/Utils.h: added support for colored text to mk_label
+	* include/VBox_VisualDisk.h,
+	  include/VBox_VisualDisk.cc: use UTF-8 character ██ instead of some self-forged widget.
+
 2004-10-06 Bart Hakvoort  <gparted@users.sf.net>
 
 	* implemented mk_label wherever possible (means less code, improved readability)
